# ScriptGuard

./: .env.example  .gitignore  .podrunignore  ARCHITECTURE_PRESENTATION.md  CHANGELOG_V2.md  PODRUN_README.md  PODRUN_SUMMARY.md  README.md  TRAINING_PARAMETERS_GUIDE.md  check_db_fresh.py  check_fresh_db.py  check_podrun_env.py  check_qdrant_count.py  check_services.bat  check_zenml.py  config.linux.yaml  config.test.yaml  config.yaml  config_runpod.yaml  connect.ps1  connect.sh  debug_import.py  debug_nvd_request.py  dev-setup.bat  dev-setup.sh  final_verification.py  install_unsloth.sh  main.py  podrun-setup.ps1  podrun-setup.sh  pyproject.toml  requirements.txt  save_samples.py  test-podrun.ps1  test-podrun.sh  test_binary_filter.py  test_connectivity.py  test_constrained_eval.py  test_dependencies.py  test_github_files.py  (+10 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
contabo/: clean.sh  docker-compose.yml  init-db.sql  setup-volumes.sh  setup.sh
docker/: .env.vps.example  Dockerfile  VPS_DEPLOYMENT.md  backup-vps.sh  docker-compose.dev.yml  docker-compose.vps.yml  docker-compose.yml  init-db.sql  prometheus-dev.yml  setup-vps.sh  test_vps_connectivity.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  METRICS_GUIDE.md  PRODUCTION_READINESS_REVIEW.md  QDRANT_API_KEY_GUIDE.md  QDRANT_SETUP.md  TRAINING_GUIDE.md  TUNING_GUIDE.md  USAGE_GUIDE.md
scripts/: benchmark_rag_improvements.py  bootstrap_qdrant.py  calibrate_thresholds.py  enrich_cve_final.py  enrich_cve_working.py  enrich_qdrant_cve.py  migrate_to_loguru.py  test_improvements.py
scripts/tests/: check_augmentation_potential.py  check_cve_count.py  check_db_fresh.py  check_fresh_db.py  run_eval_only.py  save_samples.py  setup_fewshot_rag.py  test_binary_filter.py  test_config_env_vars.py  test_connectivity.py  test_constrained_eval.py  test_constrained_generation.py  test_cve_fetch.py  test_enhanced_rag_quick.py  test_enrich_simple.py  test_env_check.py  test_fewshot_rag.py  test_github_files.py  test_ingestion_db.py  test_ingestion_integration.py  test_ingestion_only.py  test_integration_pipeline.py  test_mb_api.py  test_model_loading.py  test_nvd_api.py  test_nvd_now.py  test_pipeline_quick.py  test_production_cve.py  test_qdrant_api.py  test_qdrant_api_key.py  test_qdrant_auth_debug.py  test_qdrant_result_format.py  test_rag_enhancements.py  test_rag_offline_eval.py  test_rag_p0_features.py  test_real_functionality.py  test_sanitization.py  test_simple.py  test_source_fix.py  test_vx_quick.py  (+4 more)
src/: main.py
src/scriptguard/: config_loader.py
src/scriptguard/api/: __init__.py  main.py  schemas.py  state.py
src/scriptguard/data_sources/: __init__.py  additional_hf_datasets.py  cve_feeds.py  github_api.py  huggingface_datasets.py  malwarebazaar_api.py  pypi_packages.py  thezoo_api.py  vxunderground_api.py
src/scriptguard/database/: __init__.py  dataset_manager.py  db_schema.py  deduplication.py
src/scriptguard/inference/: engine.py
src/scriptguard/materializers/: __init__.py  dataset_materializer.py
src/scriptguard/models/: codebert_classifier.py  qlora_finetuner.py
src/scriptguard/monitoring/: __init__.py  data_stats.py
src/scriptguard/pipelines/: training_pipeline.py
src/scriptguard/preprocessing/: smart_truncator.py
src/scriptguard/rag/: __init__.py  chunking_service.py  code_sanitization.py  code_similarity_store.py  embedding_service.py  qdrant_store.py  reranking_service.py
src/scriptguard/schemas/: __init__.py  config_schema.py  data_schemas.py
src/scriptguard/steps/: advanced_augmentation.py  advanced_ingestion.py  data_ingestion.py  data_preprocessing.py  data_validation.py  feature_extraction.py  model_evaluation.py  model_training.py  qdrant_augmentation.py  vectorize_samples.py
src/scriptguard/utils/: __init__.py  archive_extractor.py  data_quality_filter.py  file_validator.py  logger.py  prompts.py  retry_utils.py  sample_saver.py  step_cache.py  windows_triton_fix.py
tests/: test_config_path_env.py  test_config_test.py  test_config_type_conversion.py  test_hierarchical_chunking.py  test_rag_architecture_improvements.py  test_rag_ingestion_validation.py  test_unsloth_training.py
