[project]
name = "scriptguard"
version = "0.1.0"
description = "Production-ready Malware Detection System for Scripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zenml[server]",
    "qdrant-client>=1.7.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "comet-ml",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    # Note: torch is installed separately with CUDA support
    # See installation instructions in README.md
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "wandb>=0.24.1",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
# For CPU-only training (not recommended for production)
cpu = [
    "torch>=2.1.0",
]

# For CUDA 12.4 support (recommended for NVIDIA GPUs)
cuda124 = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
]

# For CUDA 11.8 support (alternative for older GPUs)
cuda118 = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Custom index for PyTorch with CUDA support
# Users should install with: uv pip install -e ".[cuda124]" --index-url https://download.pytorch.org/whl/cu124
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
