[project]
name = "scriptguard"
version = "0.1.0"
description = "Production-ready Malware Detection System for Scripts"
readme = "README.md"
requires-python = ">=3.12,<3.14"  # PyTorch CUDA requires Python <=3.12
dependencies = [
    "zenml[server]",
    "qdrant-client>=1.7.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "comet-ml",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    # Note: torch is installed separately with CUDA support
    # See installation instructions in README.md
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "wandb>=0.24.1",
    "loguru>=0.7.0",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0",
    "transformers>=4.36.0",
    "py7zr>=1.1.0",
    "pyzipper>=0.3.6",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }
# PyTorch is NOT included in dependencies to avoid conflicts with CUDA versions
# Install manually after uv sync:
#   uv pip install torch==2.6.0 torchvision==0.21.0 torchaudio==2.6.0 --index-url https://download.pytorch.org/whl/cu124

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

