[project]
name = "scriptguard"
version = "0.1.0"
description = "ML-based Malicious Script Detection Pipeline"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    # --- Core ML (CUDA 12.4) - Direct URLs to CUDA wheels ---
    "torch @ https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "torch @ https://download.pytorch.org/whl/cu124/torch-2.6.0%2Bcu124-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.21.0%2Bcu124-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "torchvision @ https://download.pytorch.org/whl/cu124/torchvision-0.21.0%2Bcu124-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    "torchaudio @ https://download.pytorch.org/whl/cu124/torchaudio-2.6.0%2Bcu124-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "torchaudio @ https://download.pytorch.org/whl/cu124/torchaudio-2.6.0%2Bcu124-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux'",
    # --- LLM & Optimization ---
    "transformers>=4.51.3,<4.58.0",
    "accelerate>=0.34.0",
    "peft>=0.7.1",
    "bitsandbytes>=0.44.1",
    # --- UNSLOTH ---
    "unsloth[cu124-torch251] @ git+https://github.com/unslothai/unsloth.git",
    "unsloth-zoo @ git+https://github.com/unslothai/unsloth-zoo.git",
    # --- TRITON FIX (Windows Support) ---
    "triton>=3.0.0; sys_platform == 'linux'",
    "triton @ https://github.com/woct0rdho/triton-windows/releases/download/v3.1.0-windows.post5/triton-3.1.0-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    # --- Flash Attention 2 (REQUIRED for config_runpod.yaml) ---
    "flash-attn>=2.7.0; sys_platform == 'linux'",
    # --- MLOps & Data ---
    "zenml[server]>=0.63.0",
    "mlflow>=2.15.0",
    "datasets>=2.20.0",
    "sentence-transformers>=3.3.0,<4.0.0",
    # --- Database & Vector Store ---
    "psycopg2-binary>=2.9.9",
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    # --- Utils ---
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "requests>=2.32.0",
    "huggingface-hub>=0.24.0",
    "py7zr>=1.1.0",
    "pyzipper>=0.3.6",
    "wandb>=0.24.1",
    # --- Code Analysis ---
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "bandit>=1.7.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://download.pytorch.org/whl/cu124"
extra-index-url = ["https://pypi.org/simple"]
index-strategy = "unsafe-first-match"

# Override conflicting xformers dependencies from unsloth with pre-built wheels
override-dependencies = [
    "xformers @ https://download.pytorch.org/whl/cu124/xformers-0.0.29.post3-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "xformers @ https://download.pytorch.org/whl/cu124/xformers-0.0.29.post3-cp312-cp312-manylinux_2_28_x86_64.whl ; sys_platform == 'linux'",
    "torchao==0.13.0"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
